Últimos retoques a la solución. Entregado.

--- a/DD-Interfaces/Makefile
+++ b/DD-Interfaces/Makefile
@@ -11,3 +11,8 @@ conversionTest: conversion.o
 
 tests: conversionTest
 	./conversionTest
+
+clean:
+	rm .\conversionTest.exe
+	rm .\tablasConversion.exe
+	rm .\conversion.o
